force-app/main/default/objects/Expedition_Member__c/Expedition_Member__c.object-meta.xml
<CustomObject>
    <label>Expedition Member</label>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Expedition Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expedition Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>