force-app/main/default/objects/Expedition_Member__c/fields/Expedition__c.field-meta.xml
<CustomField>
    <fullName>Expedition__c</fullName>
    <label>Expedition</label>
    <referenceTo>Expedition__c</referenceTo>
    <relationshipLabel>Expedition Members</relationshipLabel>
    <relationshipName>Expedition_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>