force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Country__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Country__c</fullName>
    <formula>TEXT(Expedition__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition Country</label>
    <type>Text</type>
</CustomField>