force-app/main/default/objects/Expedition_Member__c/fields/Expedition_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expedition_End_Date__c</fullName>
    <formula>Expedition__r.Expedition_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition End Date</label>
    <type>Date</type>
</CustomField>