force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Member_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition Member Name</label>
    <type>Text</type>
</CustomField>