force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Name__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Name__c</fullName>
    <formula>Expedition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition Name</label>
    <type>Text</type>
</CustomField>