force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Port_Name__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Port_Name__c</fullName>
    <formula>TEXT(Expedition__r.Port_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition Port Name</label>
    <type>Text</type>
</CustomField>