force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Role__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Role__c</fullName>
    <label>Expedition Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Crew Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>