force-app/main/default/objects/Expedition_Member__c/fields/Expedition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Start_Date__c</fullName>
    <formula>Expedition__r.Expedition_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedition Start Date</label>
    <type>Date</type>
</CustomField>